Mastering DevSecOps Integrating Security Seamlessly/devsecops-lab/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-demo-service
  namespace: devsecops-demo
spec:
  selector:
    app: devsecops-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
