Mastering DevSecOps Integrating Security Seamlessly/devsecops-lab/k8s-manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-demo-netpol
  namespace: devsecops-demo
spec:
  podSelector:
    matchLabels:
      app: devsecops-demo
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - {}
